tests/src/snapshots/pluma_tests__parse_success__type_enum_same_line.snap
---
source: tests/src/parse_success.rs
expression: enum Bool | True | False
---

=== Source ===
enum Bool | True | False

=== Tokens ===
[
    KeywordEnum(
        0,
        4,
    ),
    Identifier(
        5,
        9,
    ),
    Pipe(
        10,
        11,
    ),
    Identifier(
        12,
        16,
    ),
    Pipe(
        17,
        18,
    ),
    Identifier(
        19,
        24,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        24,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                24,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        24,
                    ),
                    kind: Enum {
                        variants: [
                            EnumVariantNode {
                                pos: (
                                    12,
                                    16,
                                ),
                                kind: Ident(
                                    IdentifierNode {
                                        pos: (
                                            12,
                                            16,
                                        ),
                                        name: "True",
                                        typ: None,
                                    },
                                ),
                            },
                            EnumVariantNode {
                                pos: (
                                    19,
                                    24,
                                ),
                                kind: Ident(
                                    IdentifierNode {
                                        pos: (
                                            19,
                                            24,
                                        ),
                                        name: "False",
                                        typ: None,
                                    },
                                ),
                            },
                        ],
                    },
                    name: IdentifierNode {
                        pos: (
                            5,
                            9,
                        ),
                        name: "Bool",
                        typ: None,
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

