tests/src/snapshots/pluma_tests__parse_success__type_struct_across_lines.snap
---
source: tests/src/parse_success.rs
expression: "struct Person (\n  name :: String,\n  age :: Int\n)"
---

=== Source ===
struct Person (
  name :: String,
  age :: Int
)

=== Tokens ===
[
    KeywordStruct(
        0,
        6,
    ),
    Identifier(
        7,
        13,
    ),
    LeftParen(
        14,
        15,
    ),
    LineBreak(
        15,
        16,
    ),
    Identifier(
        18,
        22,
    ),
    DoubleColon(
        23,
        25,
    ),
    Identifier(
        26,
        32,
    ),
    Comma(
        32,
        33,
    ),
    LineBreak(
        33,
        34,
    ),
    Identifier(
        36,
        39,
    ),
    DoubleColon(
        40,
        42,
    ),
    Identifier(
        43,
        46,
    ),
    LineBreak(
        46,
        47,
    ),
    RightParen(
        47,
        48,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        48,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                48,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        48,
                    ),
                    kind: Struct {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        18,
                                        22,
                                    ),
                                    name: "name",
                                    typ: None,
                                },
                                TypeExprNode {
                                    pos: (
                                        26,
                                        32,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                26,
                                                32,
                                            ),
                                            name: IdentifierNode {
                                                pos: (
                                                    26,
                                                    32,
                                                ),
                                                name: "String",
                                                typ: None,
                                            },
                                            generics: [],
                                        },
                                    ),
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        36,
                                        39,
                                    ),
                                    name: "age",
                                    typ: None,
                                },
                                TypeExprNode {
                                    pos: (
                                        43,
                                        46,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                43,
                                                46,
                                            ),
                                            name: IdentifierNode {
                                                pos: (
                                                    43,
                                                    46,
                                                ),
                                                name: "Int",
                                                typ: None,
                                            },
                                            generics: [],
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            7,
                            13,
                        ),
                        name: IdentifierNode {
                            pos: (
                                7,
                                13,
                            ),
                            name: "Person",
                            typ: None,
                        },
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

