tests/src/snapshots/pluma_tests__parse_success__type_struct_same_line.snap
---
source: tests/src/parse_success.rs
expression: "struct Person (name :: String, age :: Int)"
---

=== Source ===
struct Person (name :: String, age :: Int)

=== Tokens ===
[
    KeywordStruct(
        0,
        6,
    ),
    Identifier(
        7,
        13,
    ),
    LeftParen(
        14,
        15,
    ),
    Identifier(
        15,
        19,
    ),
    DoubleColon(
        20,
        22,
    ),
    Identifier(
        23,
        29,
    ),
    Comma(
        29,
        30,
    ),
    Identifier(
        31,
        34,
    ),
    DoubleColon(
        35,
        37,
    ),
    Identifier(
        38,
        41,
    ),
    RightParen(
        41,
        42,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        42,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                42,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        42,
                    ),
                    kind: Struct {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        15,
                                        19,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        23,
                                        29,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                23,
                                                29,
                                            ),
                                            name: "String",
                                            generics: [],
                                        },
                                    ),
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        31,
                                        34,
                                    ),
                                    name: "age",
                                },
                                TypeExprNode {
                                    pos: (
                                        38,
                                        41,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                38,
                                                41,
                                            ),
                                            name: "Int",
                                            generics: [],
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            7,
                            13,
                        ),
                        name: "Person",
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

